# nnkieh-announcement-scraper

./: classification.py  fetcher.py  main.py  notify.py  once.py  pyproject.toml  requirements.txt
.github/workflows/: scraper.yaml
